[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nvidia-nim-acp"
version = "0.1.0"
description = "NVIDIA NIM ACP Client for Toad terminal"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [
    {name = "Mihai-Codes", email = "mc146@students.quantic.edu"}
]
keywords = ["ai", "agent", "cli", "nvidia", "kimi", "toad", "acp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/Mihai-Codes/nvidia-nim-acp"
Repository = "https://github.com/Mihai-Codes/nvidia-nim-acp"
Issues = "https://github.com/Mihai-Codes/nvidia-nim-acp/issues"

[project.scripts]
nvidia-nim-acp = "nvidia_nim_acp:cli_main"

[tool.uv]
dev-dependencies = []
